tests/error/09_type_unknown_field.mire
import std

struct Point {
    x :i64
    y :i64
}

pub fn main: () {
    set p = Point(x=10 y=20)
    use p.z
}